@@ -9,6 +9,10 @@ lbcd 3.4.0 (unreleased)
     plugin probably never worked, at least with OpenLDAP.  Thanks to
     Quanah Gibson-Mount for the fixes.
 
+    Fix the HTTP check to correctly verify that the server returns a 20x
+    or 30x status code.  Previously, any status code response would have
+    accidentally been considered a success.
+
     Fix a possible memory overwrite and security issue if there are more
     than 512 unique users logged on to the system.
 
